--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,8 @@ workflows:
 
 jobs:
   build:
+    environment:
+      CHROME_BIN: 'C:\Program Files\Google\Chrome\Application\chrome.exe'
     docker:
       - image: cimg/node:16.10
     # parallelism: 4
